IE8 nav visibility fix

--- a/styles/application-legacy.scss
+++ b/styles/application-legacy.scss
@@ -22,3 +22,7 @@ ol ,ul {
   @extend .govuk-list;
   @extend .govuk-list--bullet;
 }
+
+.js-enabled .govuk-header__navigation {
+  display: block;
+}
